--- a/drop.html
+++ b/drop.html
@@ -240,9 +240,7 @@
                                                 <td><strong>Ác Bá</strong></td>
                                                 <td>
                                                     <ul>
-                                                        <li>Sơ cấp hợp thạch phù</li>
                                                         <li>Yếu Quyết 65 + Bí Tịch các phái</li>
-                                                        <li>Yêu Quyết Tiêu Dao</li>
                                                         <li>Bảo thạch cấp 2</li>
                                                     </ul>
                                                 </td>
@@ -278,7 +276,7 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td><strong>YTO</strong></td>
+                                                <td><strong>Yến Tử Ô</strong></td>
                                                 <td>
                                                     <ul>
                                                         <li>Tân mãng phù theo cấp</li>
