Add link register and login

--- a/download.html
+++ b/download.html
@@ -77,17 +77,31 @@
                                     </ol>
                                 </nav>
                             </div>
-                            <div class="midbar__title">
-                                Tải Game Thiên Long Tử Vũ</div>
+                            <div class="midbar__title">Tải Game Thiên Long Tử Vũ</div>
                         </div>
                         <div class="subweb__content">
                             <article class="article">
                                 <div class="article__content">
                                     <div class="StaticMain">
                                         <div data-zone-id="0" data-line-index="0" data-line="true">
-                                            <strong>DOWNLOAD GAME: (Chuẩn bị ra mắt)</strong>
+                                            <strong>DOWNLOAD GAME: (Alpha Test 19h00 23/04/2025 - Open Beta 19h00 26/04/2025)</strong>
                                         </div>
-
+                                        <table class="table table-bordered">
+                                            <tbody>
+                                                <tr>
+                                                    <td>Dropbox</td>
+                                                    <td><a href="https://www.dropbox.com/scl/fi/6438pr5zu55oz7gj1h1dl/TLBB.zip?rlkey=x8f81uqtc0c434nas4jx83tda&st=wnfhbn28&dl=0" target="_blank">Link tải</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Google Drive</td>
+                                                    <td><a href="https://drive.google.com/file/d/1aL9XzfEtV3uSO5E8g25v5RHZVrCQOpIo/view?usp=sharing" target="_blank">Link tải</a></td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Mega</td>
+                                                    <td><a href="https://mega.nz/file/g4wwFYYb#dL8eUFTtPQy-ImySDGEsde04UdUzHhcq7Lq5aP9fXBY" target="_blank">Link tải</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
                                         <div data-zone-id="0" data-line-index="0" data-line="true"><strong>Yêu
                                                 cầu hệ thống:</strong></div>
                                         <div data-zone-id="0" data-line-index="0" data-line="true">
@@ -325,6 +339,10 @@ style="transform: scale(0.96); margin-left: 0px; transform-origin: right top;">
                         title="Group">Group</a>
                 </li>
             </ul>
+        </div>
+        <div id="btn-group-header" class="vga-wrapper">
+            <a href="https://id.thienlongtuvu.com/login" class="btn btn-login mr-3px"> Đăng nhập</a>
+            <a href="https://id.thienlongtuvu.com/register" class="btn btn-register"> Đăng ký</a>
         </div>
     </div>
 </div>
