--- a/index.html
+++ b/index.html
@@ -811,6 +811,10 @@ style="transform: scale(0.96); margin-left: 0px; transform-origin: right top;">
                 </li>
             </ul>
         </div>
+        <div id="btn-group-header" class="vga-wrapper">
+            <a href="https://id.thienlongtuvu.com/login" class="btn btn-login mr-3px"> Đăng nhập</a>
+            <a href="https://id.thienlongtuvu.com/register" class="btn btn-register"> Đăng ký</a>
+        </div>
     </div>
 </div>
     </div> <!-- End: Floating -->
