Add text convert BAC to KNB

--- a/donate.html
+++ b/donate.html
@@ -95,7 +95,8 @@
                         <article class="article">
                             <div class="article__content">
                                 <div class="StaticMain">
-                                    <p><strong>Tỉ lệ quy đổi:</strong> 100k = 1200 KNB (Kim Nguyên Bảo)</p>
+                                    <p><strong>Tỉ lệ donate:</strong> 100k = 1200 BẠC</p>
+                                    <p><strong>Tỉ lệ quy đổi BẠC thành KNB (Kim Nguyên Bảo):</strong> 1/1 VD: 1200 BẠC = 1200 KNB (Kim Nguyên Bảo)</p>
                                     <div class="donate-steps">
                                         <div class="step">
                                             <h4>Bước 1: Quét mã QR để chuyển khoản</h4>
