Update link register

--- a/drop.html
+++ b/drop.html
@@ -297,7 +297,7 @@
                                         <p>📱 Fanpage: <a href="https://www.facebook.com/profile.php?id=61573596926690">https://www.facebook.com/thienlongtuvu</a></p>
                                         <p>👥 Cộng đồng: <a href="https://www.facebook.com/groups/1287788372323017">https://www.facebook.com/groups/thienlongtuvu</a></p>
                                         <p>⬇️ Tải game: <a href="download.html">https://www.thienlongtuvu.com/download</a></p>
-                                        <p>✍️ Đăng ký: <a href="register.html">https://www.thienlongtuvu.com/register</a></p>
+                                        <p>✍️ Đăng ký: <a href="register.html">https://www.id.thienlongtuvu.com/register</a></p>
                                     </div>
 
                                     <hr>
